# SlideDrop

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE.txt  README.md  build-macos.sh  build.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: build-macos.yml  pages.yml  release-windows.yml  tests.yml
assets/macos/: README.txt
changelog/: 2026-04-30_19-19-52.md  2026-04-30_19-23-54.md  2026-04-30_23-35-10.md  2026-05-01.md  2026-05-01_04-03-39.md  2026-05-01_04-55-36.md  2026-05-01_05-00-40.md  2026-05-01_05-07-24.md  2026-05-01_05-11-38.md  2026-05-01_05-58-31.md  2026-05-01_06-09-48.md  2026-05-01_06-22-21.md  2026-05-01_06-25-00.md  2026-05-01_17-15-25.md  2026-05-01_18-43-54.md
docs/: index.html  styles.css
packaging/: SlideDrop.macos.spec  SlideDrop.spec  version_info.txt
packaging/macos/: SlideDrop.macos.spec
packaging/windows/: SlideDrop.spec  installer.iss
resources/: README.md
scripts/linux/: README.md
scripts/macos/: build-macos.sh
scripts/windows/: build.ps1  sign-exe.ps1  sync-version-info.py
src/slidedrop/: __init__.py  __main__.py  cli.py  config.py  converter.py  manager.py  models.py  scanner.py  settings.py  ui.py  version.py  worker.py
src/slidedrop/engines/: __init__.py  base.py  discovery.py  libreoffice.py  mock.py  options.py
src/slidedrop/services/: convert_meta.py  font_preflight.py  hashing.py  local_api.py  logging.py
tests/: test_convert_meta.py  test_converter.py  test_engines.py  test_font_preflight.py  test_manager.py  test_scanner.py  test_settings.py  test_worker.py
tests/support/: mock_strategy.py
