[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "slidedrop"
version = "0.1.0"
description = "Local-first PowerPoint to PDF desktop converter."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "SlideDrop" }]
dependencies = [
    "customtkinter",
    "tkinterdnd2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
