[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "slidedrop"
dynamic = ["version"]
description = "Local-first PowerPoint to PDF desktop converter."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "SlideDrop"}]
dependencies = [
    "customtkinter==5.2.2",
    "tkinterdnd2==0.4.3",
]

[project.optional-dependencies]
dev = [
    "pyinstaller==6.20.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[project.scripts]
slidedrop = "slidedrop.cli:main"

[tool.setuptools.dynamic]
version = {attr = "slidedrop.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
omit = [
    "*/slidedrop/ui.py",
    "*/slidedrop/cli.py",
    "*/slidedrop/__main__.py",
    "*/slidedrop/services/local_api.py",
]
